Chore: first functional version

--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,22 @@ Cargo.lock
 
 .venv3.12
 .venv_dagger3.12
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
