--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ### PyCharm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+.idea/.gitignore
 
 # User-specific stuff
 .idea/**/workspace.xml
@@ -324,3 +325,5 @@ Cargo.lock
 # Ignore all local history of files
 .history
 .ionide
+
+credentials
