--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ crate-type = ["cdylib"]
 pyo3 = { version = "0.23.4", features = ["extension-module"] }
 rayon = "1.10.0"
 base64 = "0.21.7"
+tempfile ="3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 # tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 
 # [dependencies.pyo3-asyncio]
